@@ -37,3 +37,8 @@ $string['fileconversionfailed'] = 'File conversion failed';
 $string['settings'] = 'Microsoft Word File Import (Atto) settings';
 $string['heading1stylelevel'] = 'Heading element level for Heading 1 style';
 $string['heading1stylelevel_desc'] = 'HTML heading element level to which the Word "Heading 1" style should be mapped';
+$string['dynamicstyles'] = 'Front-end web framework';
+$string['dynamicstyles_desc'] = 'Default HTML/CSS framework to apply in conversion process';
+$string['dynamicstyles_bootstrap'] = 'Bootstrap 4 (Moodle)';
+$string['dynamicstyles_daylight'] = 'Daylight (Brightspace)';
+$string['dynamicstyles_none'] = 'None';
